--- a/tuxcal/daemon/Makefile.am
+++ b/tuxcal/daemon/Makefile.am
@@ -1,12 +1,6 @@
 bin_PROGRAMS = tuxcald
 
-tuxcald_SOURCES = tuxcald.c
+tuxcald_SOURCES = tuxcald.cpp
 
-tuxcald_LDADD = \
-	-lpthread \
-	@FREETYPE_LIBS@
-
-AM_CPPFLAGS = \
-	@FREETYPE_CFLAGS@ \
-	-I$(top_srcdir)/include
+tuxcald_LDADD = -lpthread
 
