--- a/fbcallmonitor/fbcallmonitor.cfg
+++ b/fbcallmonitor/fbcallmonitor.cfg
@@ -1,5 +1,5 @@
-name=fbcallmonitor (v0.0.1)
-desc=Fritzbox call monitor
+name=fbcallmonitor
+desc=Fritzbox call monitor (v0.0.1)
 type=4
 icon=fritzbox.png
 
