--- a/youtube/youtube.cfg
+++ b/youtube/youtube.cfg
@@ -1,5 +1,5 @@
-name=youtube player (v0.0.1)
-desc=youtube feeds player
+name=youtube player
+desc=youtube feeds player (v0.0.1)
 type=4
 icon=youtube.png
 
