--- a/src/system/Makefile.am
+++ b/src/system/Makefile.am
@@ -32,6 +32,5 @@ libneutrino_system_a_SOURCES = \
 	settings.cpp lastchannel.cpp \
 	configure_network.cpp fsmounter.cpp \
 	helpers.cpp \
-	ytparser.cpp \
-	nkparser.cpp
+	ytparser.cpp
 
